--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 
 :root {
     --color-primary: #adb6c4;
+    --color-sucess: #82f268;
     --color-light: #db8c90;
     --color-warning: #AD4F54;
     --color-white: #fff;
@@ -35,8 +36,8 @@ h1 {
 }
 
 .container {
-    height: 700px;
-    width: 700px;
+    height: 600px;
+    width: 600px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
@@ -49,4 +50,50 @@ h1 {
     justify-content: center;
     align-items: center;
     border-radius: 5px;
+    transform: rotateY(180deg);
+    animation: 2s hideCard linear;
+    transition: transform 0.5s;
+}
+
+@keyframes hideCard {
+    0%, 70% {
+        transform: rotateY(0deg);
+    }
+    100% {
+        transform: rotateY(180deg);
+    }
+}
+
+.card img {
+    max-width: 90%;
+    max-height: 90%;
+    transform: scale(0);
+    animation: 2s hideImage linear;
+    transition: transform 0.5s;
+    border-radius: 5px;
+}
+
+@keyframes hideImage {
+    0%, 70% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0);
+    }
+}
+
+.card.active {
+    transform: rotateY(0);
+}
+
+.card.correct {
+    background-color: var(--color-sucess);
+}
+
+.card.wrong {
+    background-color: var(--color-warning);
+}
+
+.card.active img {
+    transform: scale(1);
 }
